--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.1.4",
+    "eslint": "^4.19.1",
+    "eslint-plugin-vue": "^4.4.0",
     "eventsource-polyfill": "^0.9.6",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.2.1",
@@ -52,6 +54,7 @@
     "babel-core": "^6.26.0",
     "commander": "^2.15.1",
     "copyfiles": "^2.0.0",
+    "glob": "^7.1.2",
     "gulp-babel": "^7.0.1",
     "rollup-plugin-babel": "^3.0.3"
   }
