chore: build命令集成完毕

--- a/package.json
+++ b/package.json
@@ -53,10 +53,13 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-prettier": "^0.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-standard": "^1.0.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-vue": "^3.0.0",
     "sass-loader": "^6.0.6",
+    "snazzy": "^7.1.1",
     "standard": "^11.0.1",
+    "standard-json": "^1.0.2",
     "to-fast-properties": "^2.0.0",
     "vue-loader": "^11.3.4",
     "vue-template-compiler": "^2.5.16",
