--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-debug": "^3.2.0",
     "gulp-sass": "^3.2.1",
     "http-proxy-middleware": "^0.18.0",
     "lodash.kebabcase": "^4.1.1",
