--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-vimo": "^1.0.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "commander": "^2.15.1",
@@ -32,6 +31,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "copyfiles": "^2.0.0",
     "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-plugin-vue": "^4.4.0",
     "eventsource-polyfill": "^0.9.6",
@@ -39,6 +39,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^3.2.0",
@@ -46,7 +47,7 @@
     "http-proxy-middleware": "^0.18.0",
     "lodash.kebabcase": "^4.1.1",
     "lodash.startcase": "^4.4.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "ora": "^2.0.0",
@@ -54,18 +55,20 @@
     "rimraf": "^2.6.2",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-prettier": "^0.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-standard": "^1.0.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-vue": "^3.0.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "snazzy": "^7.1.1",
     "standard": "^11.0.1",
     "standard-json": "^1.0.2",
     "to-fast-properties": "^2.0.0",
     "vue-loader": "^11.3.4",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.2.1",
